# battleship-rs

./: Cargo.toml  Dockerfile  Makefile  README.md  rustfmt.toml
.github/workflows/: cd.yml  ci.yml
src/: app.rs  event.rs  game.rs  main.rs  ui.rs
