[package]
name = "battleship-rs"
version = "0.1.0"
authors = ["Deepu K Sasidharan <d4udts@gmail.com>"]
edition = "2018"
description = """
A CLI battleship game
"""
documentation = "https://github.com/deepu105/battleship-rs"
keywords = ["game", "battleship", "tui"]
repository = "https://github.com/deepu105/battleship-rs"
homepage = "https://github.com/deepu105/battleship-rs"
readme = "README.md"
license = "MIT"
exclude = ["assets/*", ".github", "Makefile.toml", "CONTRIBUTING.md", "*.log", "tags"]


[dependencies]
tui = { version = "0.15", default-features = false, features = ['termion'] }
termion = "1.5"
rand = "0.8"
uuid = { version = "0.8", features = ["v4"]}
structopt = { version = "0.3", default-features = false }

[[bin]]
bench = false
path = "src/main.rs"
name = "battleship"